Correctly move permission bubbles after entering / exiting fullscreen.

When full screen is entered or exited the position of the bubble arrow
may need to be updated. This change updates the location, and ensures
the bubble is repainted when the arrow location is updated.

BUG=614928

Review-Url: https://codereview.chromium.org/2036503002
Cr-Commit-Position: refs/heads/master@{#397314}