chrome/browser/ui/cocoa/info_bubble_view.mm
@@ -130,4 +130,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   backgroundColor_.reset([backgroundColor retain]);
 }
 
+- (void)setArrowLocation:(info_bubble::BubbleArrowLocation)location {
+  if (arrowLocation_ == location)
+    return;
+
+  arrowLocation_ = location;
+  [self setNeedsDisplayInRect:[self bounds]];
+}
+
 @end
