chrome/browser/ui/cocoa/website_settings/permission_bubble_controller.mm
@@ -302,7 +302,7 @@ const NSSize kPermissionIconSize = {18, 18};
 
 - (void)parentWindowDidResize:(NSNotification*)notification {
   DCHECK(bridge_);
-  [self setAnchorPoint:[self getExpectedAnchorPoint]];
+  [self updateAnchorPosition];
 }
 
 - (void)parentWindowDidMove:(NSNotification*)notification {
@@ -472,6 +472,7 @@ const NSSize kPermissionIconSize = {18, 18};
 - (void)updateAnchorPosition {
   [self setParentWindow:[self getExpectedParentWindow]];
   [self setAnchorPoint:[self getExpectedAnchorPoint]];
+  [[self bubble] setArrowLocation:[self getExpectedArrowLocation]];
 }
 
 - (NSPoint)getExpectedAnchorPoint {
